--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "proxy": "http://localhost:5000",
+  "proxy": "http://127.0.0.1:5000",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -14,9 +14,14 @@
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
     "axios": "^1.7.7",
+    "lucide-react": "^0.452.0",
     "react": "^18.3.1",
+    "react-battery-gauge": "^1.0.7",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.26.2",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -32,6 +37,5 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.8"
-  },
-  "proxy": "http://127.0.0.1:5000"
+  }
 }
