--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.8",
     "lucide-react": "^0.452.0",
     "react": "^18.3.1",
     "react-battery-gauge": "^1.0.7",
